--- a/Day1/Ques.no.3
+++ b/Day1/Ques.no.3
@@ -16,8 +16,9 @@ void sum( int arr[] , int n)
 
 int main()
 {
-  int arr[];
-  int n = sizeof( arr )/ sizeof(arr[0]);
+  int arr[] , n;
+  cout<<"Enter the size of the array\n";
+  cin>>n;
   cout<< "Enter the element in an array  ";
   for(int i = 0; i<n;i++)
   {
