--- a/Day1/Ques.no.4
+++ b/Day1/Ques.no.4
@@ -1,5 +1,14 @@
-#include<iostream>
+#include<iostream.h>
 void main()
 {
-
+ int n;
+ cout << "enter the size of an array";
+ cin>> n;
+ int arr[];
+ cout<< "enter the element in an array";
+ for( int i = 0; i<n; i++)
+  {
+  cin >> arr[i];
+  arr[i]++;
+  }
 }
